--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -21,7 +21,7 @@
   background-color: $basicgrey;
 
   @media (min-width: $tablet-width) {
-    padding-top: 60px;
+    padding-top: 58px;
     padding-bottom: 60px;
   }
 
@@ -47,6 +47,10 @@
     margin: 0;
 
     text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 4px;
   }
 }
 
@@ -74,6 +78,7 @@
   @media (min-width: $tablet-width) {
     border: none;
     padding: 0;
+    margin-top: -2px;
   }
 }
 
@@ -83,5 +88,10 @@
   @media (min-width: $tablet-width) {
     min-width: 170px;
     padding: 0;
+    margin-top: -9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: -2px;
   }
 }
