--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -19,8 +19,8 @@
 
 .page-header__logo {
   height: 38px;
-  padding-top: 12px;
-  padding-bottom: 16px;
+  margin-top: 13px;
+  margin-bottom: 15px;
   flex-shrink: 0;
 
   &:hover,
@@ -34,16 +34,26 @@
 
   @media (min-width: $tablet-width) {
     height: 51.68px;
-    padding-top: 31px;
+    margin-top: 24px;
   }
 
   @media (min-width: $desktop-width) {
     height: 59px;
-    padding-top: 64px;
+    margin-top: 53px;
   }
 }
 
 .page-header__logo-image {
   width: 191px;
   height: 37.61px;
+
+  @media (min-width: $tablet-width) {
+    width: 174px;
+    height: 51.68px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 202px;
+    height: 59px;
+  }
 }
