--- a/source/sass/blocks/application.scss
+++ b/source/sass/blocks/application.scss
@@ -1,15 +1,15 @@
 .application {
   padding-top: 10px;
-  padding-bottom: 30px;
+  padding-bottom: 29px;
 
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 70px;
+    padding-bottom: 72px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-bottom: 80px;
+    padding-bottom: 82px;
   }
 }
 
@@ -28,12 +28,12 @@
   color: black;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 36px;
-    padding-top: 18px;
+    margin-bottom: 35px;
+    margin-top: 18px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 21px;
+    margin-top: 20px;
   }
 }
 
@@ -81,7 +81,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-top: 40px;
+    margin-top: 42px;
     margin-bottom: 40px;
     padding: 10px 28px;
 
@@ -97,12 +97,12 @@
     margin-top: 30px;
     margin-bottom: 33px;
     margin-left: 40px;
-    //padding-left: 68px;
   }
 }
 
 .application__fieldset-title {
-  position: relative;
+  display: inline-block;
+
   padding: 1px 0 12px 0;
 
   font-size: 24px;
@@ -110,6 +110,18 @@
   text-transform: none;
 
   color: black;
+
+  &::after {
+    content: "";
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    width: 100vw;
+    height: 2px;
+    margin-right: -100vw;
+    right: -22px;
+    background-color: $basicgreen;
+  }
 
   @media (min-width: $tablet-width) {
     margin-bottom: 34px;
@@ -121,6 +133,26 @@
     & br {
       display: none;
     }
+
+    &::after {
+      right: -40px;
+    }
+
+    &::before {
+      content: "";
+      position: relative;
+      display: inline-block;
+      vertical-align: middle;
+      width: 100vw;
+      height: 2px;
+      margin-left: -100vw;
+      left: -40px;
+      background-color: $basicgreen;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 37px;
   }
 }
 
@@ -149,31 +181,11 @@
   @media (min-width: $tablet-width) {
     margin: 20px 0;
   }
-
-  /*@media (min-width: $desktop-width) {
-    padding-right: 40px;
-  }*/
 }
 
 .application__item--radio {
   @media (min-width: $tablet-width) {
     margin: 12px 0;
-  }
-}
-
-.application__item input {
-  flex-grow: 1;
-
-  box-sizing: border-box;
-  padding: 12px 15px 13px 15px;
-
-  font: inherit;
-  text-transform: uppercase;
-
-  border: 1px solid $specialgrey;
-
-  @media (min-width: $tablet-width) {
-    padding: 10px 15px 10px 15px;
   }
 }
 
@@ -190,8 +202,23 @@
   border: 1px solid #e7e7e7;
 
   @media (min-width: $tablet-width) {
-    margin-top: 20px;
+    margin-top: 18px;
     height: 174px;
+  }
+}
+
+.application__item input {
+  flex-grow: 1;
+  box-sizing: border-box;
+  padding: 12px 15px 13px 15px;
+
+  font: inherit;
+  text-transform: uppercase;
+
+  border: 1px solid $specialgrey;
+
+  @media (min-width: $tablet-width) {
+    padding: 10px 15px 10px 15px;
   }
 }
 
@@ -203,10 +230,34 @@
   margin-right: 14px;
 }
 
+.application__input {
+  background-repeat: no-repeat;
+
+  &--email {
+    background-image: url("../img/icon_email.svg");
+    background-position: right 14px center;
+    background-size: 20px 14px;
+  }
+
+  &--phone {
+    background-image: url("../img/icon_phone.svg");
+    background-position: right 12px center;
+    background-size: 20px 20px;
+  }
+}
+
 .application__end-wrapper {
+  margin-top: 4px;
+
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+
+    margin-top: 0;
+  }
+
+  @media (min-width: $desktop-width) {
     column-gap: 80px;
   }
 }
@@ -237,13 +288,13 @@
   color: black;
 
   @media (min-width: $tablet-width) {
-    margin: 15px 0 0 30px;
+    margin: 17px 0 0 0;
 
     font-size: 16px;
     text-align: left;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 17px 0 0 0;
+    margin: 18px 0 0 0;
   }
 }
