--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -23,6 +23,10 @@
 
 .contacts--inner-page {
   background-color: $basicgrey;
+
+  @media (min-width: $desktop-width) {
+    background-color: white;
+  }
 }
 
 .contacts__invitation {
