--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -55,7 +55,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-top: 15px;
+    margin: 50px 0 27px 0;
 
     font-size: 60px;
     line-height: 60px;
@@ -66,6 +66,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 20px;
+    margin-top: 60px;
   }
 }
