Оптимизация графики на главной странице

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -16,6 +16,8 @@
   background-color: $basicgreen;
   border: none;
 
+  cursor: pointer;
+
   &:hover,
   &:focus {
     background-color: $basicgreen2;
