--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -10,28 +10,34 @@
 }
 
 .social__item {
-  margin-right: 36px;
+  width: 23px;
+  margin-right: 33px;
 
   &:last-child {
     margin-right: 0;
   }
 
   @media (min-width: $tablet-width) {
-    margin-right: 27px;
+    width: 30px;
+    margin-right: 24px;
   }
 }
 
-.social__link {
-  display: block;
-}
+.social__icon--vkontakte,
+.social__icon--instagram {
+  fill: #666666;
 
-.social__link--instagram {
-  @media (min-width: $tablet-width) {
-    height: 23px;
+  &:hover,
+  &:focus {
+    fill: $basicgreen;
+  }
+
+  &:active {
+    fill-opacity: 0.3;
   }
 }
 
-.social__link--vkontakte svg {
+.social__icon--vkontakte {
   width: 23px;
   height: 16px;
 
@@ -41,17 +47,7 @@
   }
 }
 
-.social__link--facebook svg {
-  width: 23px;
-  height: 23px;
-
-  @media (min-width: $tablet-width) {
-    width: 28px;
-    height: 33px;
-  }
-}
-
-.social__link--instagram svg {
+.social__icon--instagram {
   width: 16px;
   height: 16px;
 
@@ -61,25 +57,25 @@
   }
 }
 
-.social__link--vkontakte,
-.social__link--instagram {
-  &:hover path,
-  &:focus path {
-    fill: $basicgreen;
-  }
+.social__icon--facebook {
+  fill: none;
+  stroke: #666666;
+  width: 20px;
+  height: 20px;
+  margin-left: -7px;
 
-  &:active path {
-    fill-opacity: 0.3;
-  }
-}
-
-.social__link--facebook {
-  &:hover path,
-  &:focus path {
+  &:hover,
+  &:focus {
     stroke: $basicgreen;
   }
 
   &:active {
     stroke-opacity: 0.3;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 24px;
+    height: 29px;
+    margin-left: -16px;
   }
 }
