--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,14 +8,14 @@
   line-height: 20px;
 
   @media (min-width: $tablet-width) {
-    padding: 57px 71px 56px 71px;
+    padding: 57px 71px 57px 71px;
   }
 
   @media (min-width: $desktop-width) {
     box-sizing: border-box;
     width: 570px;
     height: 201px;
-    padding: 54px 89px 51px 76px;
+    padding: 57px 89px 51px 76px;
 
     background-color: white;
   }
@@ -50,13 +50,13 @@
 .contacts__address-wrapper {
   min-width: 140px;
   padding-top: 8px;
-  /*padding-left: 2px;*/
 
   @media (min-width: $tablet-width) {
     text-align: right;
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 6px;
     text-align: left;
   }
 }
