--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -3,6 +3,8 @@
   justify-content: space-between;
   align-items: center;
 
+  margin: 8px 0;
+
   font-size: 16px;
   text-decoration: none;
   color: $darkgrey;
@@ -12,15 +14,17 @@
   }
 }
 
-.copyright__link p {
-  margin: 15px 0;
-
-  @media (min-width: $tablet-width) {
-    margin: 0;
-  }
-}
-
 .copyright__logo {
+  width: 27px;
+  height: 34px;
+
+  fill: #666666;
+
+  &:hover,
+  &:focus {
+    fill: $basicgreen;
+  }
+
   @media (min-width: $tablet-width) {
     margin-left: 22px;
   }
