--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,6 +9,7 @@ $darkgrey: #444444;
 $specialgrey: #cdcdcd;
 $specialdarkgrey: #222222;
 $greyforlines: #e6e6e6;
+$greyforframes: #e7e7e7;
 
 // Viewports
 
