--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -28,6 +28,12 @@
   }
 }
 
+/* Hover */
+
+.radio__input + .radio__label:hover::before {
+  border: 1px solid #bababa;
+}
+
 /* Checked */
 
 .radio__input:checked + .radio__label::after {
