--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,4 +1,4 @@
-.contacts {
+.contacts__text-block {
   padding-top: 20px;
 
   display: flex;
@@ -12,6 +12,10 @@
   }
 
   @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 95px;
+    right: 52.8%;
+    z-index: 3;
     box-sizing: border-box;
     width: 570px;
     height: 201px;
@@ -20,6 +24,7 @@
     background-color: white;
   }
 }
+
 
 .contacts--inner-page {
   background-color: $basicgrey;
@@ -74,14 +79,38 @@
 }
 
 .contacts__map {
+  position: relative;
+  height: 362px;
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
+}
+
+.contacts__map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
+}
+
+.contacts__map-image {
   display: block;
   width: 320px;
-  height: 362px;
+  //height: 362px;
   margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 
   @media (min-width: $tablet-width) {
     width: 768px;
-    height: 400px;
+    //height: 400px;
   }
 
   @media (min-width: $desktop-width) {
