--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -33,7 +33,7 @@
 
 .page__title {
   position: relative;
-  margin: 27px 0;
+  margin: 28px 0 27px 0;
 
   font-family: "Oswald", sans-serif;
   font-size: 36px;
