--- a/source/sass/blocks/additional-goods.scss
+++ b/source/sass/blocks/additional-goods.scss
@@ -14,7 +14,7 @@
 
 .additional-goods__title {
   display: inline-block;
-  margin: 24px 0;
+  margin: 25px 0 23px 0;
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -36,7 +36,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin: 66px 0 30px 37px;
+    margin: 67px 0 30px 37px;
     font-size: 36px;
     line-height: 36px;
 
@@ -180,6 +180,11 @@
     min-width: 70px;
     margin-left: 23px;
   }
+
+  @media (min-width: $desktop-width) {
+    min-width: 42px;
+    text-align: left;
+  }
 }
 
 .additional-goods__button {
@@ -213,7 +218,7 @@
 
   @media (min-width: $tablet-width) {
     height: 200px;
-    margin-top: 69px;
+    margin-top: 68px;
     margin-bottom: 76px;
 
     background-image: url("../img/gift-tablet.png");
