--- a/source/sass/blocks/goals.scss
+++ b/source/sass/blocks/goals.scss
@@ -18,8 +18,8 @@
 .goals__item {
   position: relative;
   box-sizing: border-box;
-  padding: 20px;
-  margin-bottom: 22px;
+  padding: 21px 20px;
+  margin-bottom: 20px;
 
   background-color: $basicgrey;
 
@@ -47,7 +47,7 @@
     top: 21px;
     left: 29px;
     width: 50px;
-    height: 53px;
+    height: 50px;
 
     background-image: url("../img/icon_cat_sit.svg");
   }
