--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -40,10 +40,14 @@
   }
 }
 
+.product-card a {
+  text-decoration: none;
+}
+
 .product-card__title {
   grid-area: product-title;
 
-  margin: 2px 0;
+  margin: 2px 0 0 0;
 
   font-family: "Oswald", sans-serif;
   font-size: 16px;
@@ -64,6 +68,7 @@
 
   @media (min-width: $desktop-width) {
     margin-bottom: 8px;
+    margin-left: 3px;
 
     line-height: 21px;
   }
@@ -95,7 +100,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 42px;
+    margin: 0 -4px 42px 0;
   }
 }
 
@@ -118,7 +123,7 @@
   margin: 0;
 
   @media (min-width: $desktop-width) {
-    margin-top: 8px;
+    margin: 8px 0 0 0;
   }
 }
 
@@ -144,10 +149,6 @@
   padding-top: 12px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 27px;
-  }
-
-  @media (min-width: $desktop-width) {
     margin-top: 27px;
   }
 }
