Правки по критериям (шрифт, переполнение, дубль css)

--- a/source/sass/blocks/additional-goods.scss
+++ b/source/sass/blocks/additional-goods.scss
@@ -15,7 +15,7 @@
 .additional-goods__title {
   display: inline-block;
   margin: 25px 0 23px 0;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
@@ -122,7 +122,7 @@
 .additional-good__title {
   margin: 12px 0 0 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
@@ -188,7 +188,7 @@
 }
 
 .additional-goods__button {
-  padding-top: 11px;
+  padding: 11px 2px 9px 2px;
   width: 100%;
 
   @media (min-width: $tablet-width) {
@@ -202,10 +202,12 @@
 }
 
 .additional-goods__bonus {
+  box-sizing: border-box;
   width: 100%;
-  height: 289px;
+  min-height: 289px;
   margin-top: 39px;
   margin-bottom: 35px;
+  padding: 5px;
 
   background-image: url("../img/gift-mobile.png");
   background-position: center center;
@@ -217,7 +219,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    height: 200px;
+    min-height: 200px;
     margin-top: 68px;
     margin-bottom: 76px;
 
@@ -229,7 +231,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    height: 289px;
+    min-height: 289px;
     width: 245px;
     margin: 0 0 0 80px;
 
@@ -244,7 +246,7 @@
 .additional-goods__bonus-text {
   position: relative;
   margin: 0;
-  padding-top: 188px;
+  padding-top: 183px;
 
   font-size: 16px;
   line-height: 20px;
@@ -255,7 +257,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: 58px;
+    top: 53px;
     left: 50%;
     width: 78px;
     height: 80px;
@@ -268,7 +270,7 @@
 
   @media (min-width: $tablet-width) {
     margin-left: 59.7%;
-    padding-top: 73px;
+    padding-top: 68px;
 
     text-align: left;
 
@@ -281,7 +283,7 @@
 
   @media (min-width: $desktop-width) {
     margin-left: 0;
-    padding-top: 189px;
+    padding-top: 183px;
 
     text-align: center;
 
