--- a/source/sass/blocks/basic-goods.scss
+++ b/source/sass/blocks/basic-goods.scss
@@ -73,7 +73,7 @@
 
   @media (min-width: $tablet-width) {
     box-sizing: border-box;
-    height: 429px;
+    min-height: 429px;
     margin-top: 73px;
     padding: 36px;
 
@@ -94,7 +94,7 @@
   margin: 0;
   padding-top: 60px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -163,7 +163,7 @@
 .basic-goods__button {
   width: 100%;
   margin-top: 22px;
-  padding-top: 11px;
+  padding: 11px 2px 9px 2px;
 
   color: $darkgrey;
   background-color: $basicgrey;
