--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -4,7 +4,7 @@
   width: 280px;
   min-height: 40px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
