--- a/source/sass/blocks/case.scss
+++ b/source/sass/blocks/case.scss
@@ -45,7 +45,7 @@
 .case__title {
   margin: 7px 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 40px;
@@ -140,10 +140,12 @@
 }
 
 .case__number {
+  width: 110px;
+  margin: 0 auto;
   padding-top: 14px;
   padding-bottom: 10px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
@@ -152,18 +154,22 @@
   color: black;
 
   @media (min-width: $tablet-width) {
+    width: 150px;
+
     font-size: 30px;
     line-height: 37px;
   }
 }
 
 .case__description {
-  margin: 0;
+  width: 82px;
+  margin: 0 auto;
 
   font-size: 12px;
   line-height: 12px;
 
   @media (min-width: $tablet-width) {
+    width: 130px;
     margin-top: 1px;
 
     font-size: 14px;
@@ -180,7 +186,7 @@
 .case__sum {
   margin: 19px 0 41px 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -200,7 +206,7 @@
 
   @media (min-width: $desktop-width) {
     width: 366px;
-    margin: 52px auto 0 0;
+    margin: 52px auto 40px 0;
 
     text-align: left;
   }
@@ -368,7 +374,7 @@
   margin-right: 118px;
   padding: 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
