--- a/source/sass/blocks/how-it-works.scss
+++ b/source/sass/blocks/how-it-works.scss
@@ -1,5 +1,5 @@
 .how-it-works {
-  margin-bottom: 32px;
+  margin-bottom: 42px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 51px;
@@ -13,7 +13,7 @@
 .how-it-works__title {
   margin: 27px 0 28px 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 40px;
@@ -34,7 +34,7 @@
 }
 
 .how-it-works__list {
-  margin: 0;
+  margin: 38px 0 0 0;
   padding: 0;
 
   list-style: none;
@@ -45,6 +45,7 @@
     grid-column-gap: 60px;
     grid-row-gap: 37px;
     align-content: start;
+    margin: 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -55,7 +56,10 @@
 
 .how-it-works__item {
   position: relative;
-  padding: 12px 0 14px 80px;
+  box-sizing: border-box;
+  padding: 3px 0 3px 80px;
+  margin: 20px 0;
+  min-height: 60px;
 
   &::before {
     content: "";
@@ -88,11 +92,10 @@
   }
 
   @media (min-width: $tablet-width) {
-    box-sizing: border-box;
     width: 250px;
     min-height: 280px;
-    padding-top: 157px;
-    padding-left: 0;
+    padding: 157px 0 14px 0;
+    margin: 0;
 
     &::after {
       position: absolute;
@@ -100,7 +103,7 @@
       right: 0;
       z-index: -1;
 
-      font-family: "Oswald", sans-serif;
+      font-family: "Oswald", "Arial", sans-serif;
       font-size: 280px;
       line-height: 280px;
       color: $basicgrey;
