--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -103,7 +103,7 @@
   padding-top: 23px;
   padding-bottom: 23px;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 20px;
@@ -151,7 +151,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-top: 60px;
+    margin-top: 31px;
 
     font-size: 20px;
     line-height: 30px;
