--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -1,7 +1,7 @@
 .page-form {
   grid-area: content;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
 
   // для скрывания зеленых линий около заголовков
