--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -8,39 +8,54 @@
 }
 
 .page-main__h1-promo-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
   margin-top: 1px;
 
+  background-image:
+    linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+    url("../img/promo-background-mobile.jpg");
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size:
+    100% 302px,
+    320px auto;
+
+  @media (min-resolution: 2dppx) {
+    background-image:
+      linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      url("../img/promo-background-mobile@2x.jpg");
+  }
+
+  @media (min-width: $tablet-width) {
+    background-image: none;
+    margin-top: 49px;
+  }
+
   @media (min-width: $desktop-width) {
-    margin-top: 14px;
-    margin-bottom: 82px;
+    margin: -128px 0 82px 0;
+    padding-top: 128px;
+    min-height: 566px;
   }
 }
 
 .page-main__title-wrapper {
-  grid-column: 1 / -1;
-  grid-row: 1 / 2;
-  margin-top: 27px;
-
-  z-index: 1;
+  padding: 27px 0 0 0;
 
   @media (min-width: $tablet-width) {
-    padding-left: 117px;
-    margin-top: 48px;
+    padding: 0 0 0 117px;
   }
 
   @media (min-width: $desktop-width) {
+    box-sizing: border-box;
     width: 1220px;
-    margin: 82px auto 0 auto;
-    padding-left: 160px;
+    margin: 96px auto 0 auto;
+    padding: 0 700px 0 80px;
   }
 }
 
 .page-main__title {
   margin: 0;
-  font-family: "Oswald", sans-serif;
+
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
