--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -35,7 +35,7 @@
   position: relative;
   margin: 28px 0 27px 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
