--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -30,18 +30,29 @@
     background-image: linear-gradient(to top, $basicgrey, $basicgrey);
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: 100% 430px;
+    background-size: 100% 85.5%;
 
     font-size: 16px;
   }
 
   @media (min-width: $desktop-width) {
     padding: 0 38px 41px 39px;
+
+    background-size: 100% 84.34%;
   }
 }
 
-.product-card a {
+.product-card__link {
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .product-card__title {
@@ -49,7 +60,7 @@
 
   margin: 2px 0 0 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -146,7 +157,7 @@
 
   width: 100%;
   margin-top: 9px;
-  padding-top: 12px;
+  padding: 12px 2px 9px 2px;
 
   @media (min-width: $tablet-width) {
     margin-top: 27px;
