--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,47 +1,8 @@
 .promo {
-  grid-column: 1 / -1;
-  grid-row: 1 / 3;
-
   margin-bottom: 22px;
 
-  background-image:
-    linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-    url("../img/promo-background-mobile.jpg");
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size:
-    100% 302px,
-    320px auto;
-
-  @media (min-resolution: 2dppx) {
-    background-image:
-      linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-      url("../img/promo-background-mobile@2x.jpg");
-  }
-
   @media (min-width: $tablet-width) {
-    background-image: none;
-    margin-bottom: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-top: -141px;
-    padding-top: 141px;
-
-    background-image:
-      linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-      url("../img/promo-background-desktop.jpg");
-    background-position: right center;
-    background-repeat: no-repeat;
-    background-size:
-      50% 694px,
-      50% auto;
-
-    @media (min-resolution: 2dppx) {
-      background-image:
-        linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-        url("../img/promo-background-desktop@2x.jpg");
-    }
+    margin-bottom: 7px;
   }
 }
 
@@ -51,19 +12,27 @@
     grid-template-columns: 1fr;
     grid-template-rows:
       min-content
+      min-content
       min-content;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 448px auto;
-    grid-template-rows: min-content;
+    grid-template-rows:
+      min-content
+      min-content
+      min-content;
+    grid-template-areas:
+      "p-slogan p-image"
+      "p-button p-image"
+      ". p-image";
   }
 }
 
 .promo__slogan {
-  margin: 124px 0 29px 0;
+  margin: 25px 0 29px 0;
 
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
@@ -75,18 +44,33 @@
   @media (min-width: $tablet-width) {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
-    margin: 210px 0 18px 88px;
+    margin: 42px 0 18px 88px;
 
     font-size: 20px;
     line-height: 20px;
     text-align: left;
 
     color: black;
+    z-index: 1;
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 1 / 2;
-    margin: 242px 0 0 80px;
+    margin: 41px 0 10px 80px;
+    grid-area: p-slogan;
+  }
+}
+
+// для позиционирования в гриде (т.к. есть picture)
+.promo__image-wrapper {
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 2 / -1;
+    margin: 1px 0 -7px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-area: p-image;
+    margin: -202px 0 0 0;
   }
 }
 
@@ -97,27 +81,20 @@
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    grid-column: 1 / -1;
-    grid-row: 2 / 3;
     width: 709px;
     height: 609px;
-    margin-top: -83px;
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    margin: 0;
     width: 552px;
     height: 499px;
-    margin: 0;
-    padding-bottom: 54px;
   }
 }
 
 .promo__button {
   margin: 3px auto 0 auto;
-  padding-top: 11px;
-  padding-bottom: 11px;
+  padding: 11px 2px;
 
   font-size: 14px;
 
@@ -125,10 +102,9 @@
     grid-column: 1 / -1;
     grid-row: 2 / 3;
     margin: 30px 0 0 82px;
-    height: 54px;
+    min-height: 54px;
     width: 244px;
-    padding-top: 17px;
-    padding-bottom: 17px;
+    padding: 17px 2px;
     z-index: 1;
 
     font-size: 20px;
@@ -136,8 +112,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    margin: 314px 0 0 80px;
+    margin: 40px 0 27px 80px;
+    grid-area: p-button;
   }
 }
