--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,10 +1,8 @@
-.social__list {
+.social {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  margin: 0;
-  padding: 0;
+  flex-wrap: wrap;
 
   list-style: none;
 }
